k8s/advanced-setup/ingress-eck.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: eck-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/app-root: "/"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # "413 Request Entity Too Large" uploading plugins, increase client_max_body_size
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    # For nginx-ingress controller < 0.9.0.beta-18
    ingress.kubernetes.io/ssl-redirect: "true"
    # "413 Request Entity Too Large" uploading plugins, increase client_max_body_size
    ingress.kubernetes.io/proxy-body-size: 50m
    ingress.kubernetes.io/proxy-request-buffering: "off"

spec:
  tls:
  - hosts:
      - es.example.com
      # - kibana.example.com
  rules:
  - host: kibana.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: production-eck-kb-http
          servicePort: 5601
  - http:
      paths:
      - path: /
        backend:
          serviceName: production-eck-es-http
          servicePort: 9200
    host: es.example.com
